# atlite-meets-earthkit-data

./: pyproject.toml
atlite/: __init__.py  gis.py
atlite/datasets/: __init__.py  enfo.py  era5.py  ifs_ens.py
examples/: create_cutout_IFS_ENS.ipynb  create_cutout_IFS_ENS.ipynb.license  prediction-vs-climo-germany.ipynb
test/: test_ifs_ens.py
