# SPDX-FileCopyrightText: Contributors to atlite <https://github.com/pypsa/atlite>
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "atlite"
dynamic = ["version"]
description = "Library for fetching and converting weather data to power systems data"
readme = "README.rst"
authors=[{name = "Contributors to atlite", email = "jonas.hoersch@posteo.de"}]
license = { file = "LICENSE" }
classifiers=[
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",

]
requires-python = ">=3.10"
dependencies = [
    "typing-extensions",
    "numpy",
    "scipy",
    "pandas>=0.25",
    "bottleneck",
    "numexpr",
    "xarray>=2024.03.0",
    "netcdf4",
    "dask>=2021.10.0",
    "toolz",
    "requests",
    "pyyaml",
    "rasterio!=1.4.0,!=1.4.1",
    "shapely",
    "progressbar2",
    "tqdm",
    "pyproj>=2",
    "geopandas>=0.10.0",
    "cdsapi>=0.7.4",
    "cfgrib>=0.9.15.0",
    "h5netcdf>=1.6.1",
    "earthkit (>=0.12.0,<0.13.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "ecmwf-api-client (>=1.6.5,<2.0.0)",
    "polars (>=1.33.1,<2.0.0)",
]

[project.urls]
Homepage = "https://github.com/PyPSA/atlite"
Source = "https://github.com/PyPSA/atlite"
Documentation = "https://atlite.readthedocs.io/en/latest/"

[project.optional-dependencies]

dev = ["pre-commit", "pytest", "pytest-cov", "matplotlib", "ruff"]

docs = [
    "numpydoc==1.8.0",
    "sphinx==8.0.2",
    "sphinx-book-theme==1.1.3",
    "nbsphinx==0.9.5",
    "nbsphinx-link==1.3.0",
    "docutils==0.20",           # Just temporarily until sphinx-docutils is updated (see https://github.com/sphinx-doc/sphinx/issues/12340)
]

# Setuptools_scm settings

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.setuptools.packages.find]
include = ["atlite"]

# Poetry settings

[tool.poetry]
version = "0.0.0"  # This will be overridden by setuptools_scm

# Formatter and linter settings

[tool.ruff]
extend-include = ['*.ipynb']

[tool.ruff.lint]
select = [
    'F',   # pyflakes
    'E',   # pycodestyle: Error
    'W',   # pycodestyle: Warning
    'I',   # isort
    'D',   # pydocstyle
    'UP',  # pyupgrade
    'TID', # flake8-tidy-imports
    # 'NPY', # numpy
    'RUF013', # ruff
]

ignore = [
    'E501', # line too long
    'E741', # ambiguous variable names
    'D105', # Missing docstring in magic method
    'D212', # Multi-line docstring summary should start at the second line
    'D200', # One-line docstring should fit on one line with quotes
    'D401', # First line should be in imperative mood
    'D404', # First word of the docstring should not be "This
    'D413', # Missing blank line after last section

    # # pydocstyle ignores, which could be enabled in future when existing
    # # issues are fixed
    'D100', # Missing docstring in public module
    'D101', # Missing docstring in public class
    'D102', # Missing docstring in public method
    'D103', # Missing docstring in public function
    'D107', # Missing docstring in __init__
    'D202', # No blank lines allowed after function docstring
    'D203', # 1 blank line required before class docstring
    'D205', # 1 blank line required between summary line and description
    'D400', # First line should end with a period
    'D415', # First line should end with a period, question mark, or exclamation point
    'D417', # Missing argument descriptions in the docstring

]

[dependency-groups]
examples = [
    "pgeocode (>=0.5.0,<0.6.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]
